--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
-			<h1 id="colorlib-logo"><a href="index.html">elen<span>.</span></a></h1>
+			<img src="images/logo1.png" alt="Logo" width="100%">
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li class="colorlib-active"><a href="index.html">Home</a></li>
@@ -46,7 +46,7 @@
 
 			<div class="colorlib-footer">
 				<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-			  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+					CRP: 06/176133
 				<ul>
 					<li><a href="#"><i class="icon-facebook"></i></a></li>
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -56,16 +56,16 @@
 			</div>
 		</aside> <!-- END COLORLIB-ASIDE -->
 		<div id="colorlib-main">
-			<div class="hero-wrap js-fullheight" style="background-image: url(images/bg_1.jpg);" data-stellar-background-ratio="0.5">
+			<div class="hero-wrap js-fullheight" style="background-image: url(images/bg_1.png);" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
 				<div class="js-fullheight d-flex justify-content-center align-items-center">
 					<div class="col-md-8 text text-center">
-						<div class="img mb-4" style="background-image: url(images/author.jpg);"></div>
+						<div class="img mb-4" style="background-image: url(images/profile.png);"></div>
 						<div class="desc">
-							<h2 class="subheading">Hello I'm</h2>
-							<h1 class="mb-4">Elen Henderson</h1>
-							<p class="mb-4">I am A Blogger Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							<p><a href="#" class="btn-custom">More About Me <span class="ion-ios-arrow-forward"></span></a></p>
+							<h2 class="subheading">Olá, sou a psicóloga</h2>
+							<h1 class="mb-4">Yasmim Bergamo</h1>
+							<p class="mb-4">Acredito que todos nesse nosso mundo precisam de algum tipo de apoio psicológico.</br>Sigo a abordagem Cognitivo-Comportamental para dar esse apoio que você precisa.</p>
+							<p><a href="https://wa.me/5516994198129?text=Oii!%20Me%20conte%20do%20seu%20atendimento...%20Como%20ele%20funciona?%20" target="_blank" rel="noopener noreferrer" class="btn-custom">Agende comigo <span class="ion-ios-arrow-forward"></span></a></p>
 						</div>
 					</div>
 				</div>
